@@ -1,5 +1,6 @@
 v1.0.1
     Fixed a bug that the amount of station module cannot be changed after changing the order of the station module.
+    Check update in background when startup.
 
 v1.0.0
     Rewrite in C++.
